# atomix

./: Cargo.toml  notes.md
.github/workflows/: build_and_test.yaml
common/: Cargo.toml
common/src/: config.rs  full_range_id.rs  host_info.rs  keyspace_id.rs  lib.rs  range_type.rs  replication_mapping.rs
configs/: config.json  config_for_jepsen.json
coordinator/: Cargo.toml
coordinator/src/: cache.rs  coordinator.rs  lib.rs  transaction.rs
coordinator/src/cache/: in_memory.rs  no_op.rs
e2e_tests/: Cargo.toml
e2e_tests/src/: helpers.rs  lib.rs  replication.rs  simple_e2e.rs
epoch_publisher/src/: client.rs
epoch_publisher/tests/: integration_tests.rs
flatbuf/src/rangeserver/: schema.fbs
frontend/: Cargo.toml
frontend/src/: client.rs  for_testing.rs  frontend.rs  lib.rs  main.rs  range_assignment_oracle.rs
frontend/src/for_testing/: mock_epoch_publisher.rs  mock_rangeserver.rs  mock_universe.rs
frontend/tests/: integration_tests.rs
kubernetes/: deploy.sh  epoch_publisher.yaml  epoch_service.yaml  frontend.yaml  rangeserver.yaml  universe.yaml  warden.yaml
proto/src/: frontend.proto  rangeserver.proto  universe.proto  warden.proto
pub_fields/: Cargo.toml
pub_fields/src/: lib.rs
pub_fields/tests/: test.rs
pub_fields/tests/ui/: fail.rs  fail.stderr  ok.rs
rangeclient/tests/: integration_tests.rs
rangeserver/: Cargo.toml
rangeserver/src/: error.rs  lib.rs  main.rs  range_manager.rs  secondary_range_manager.rs  server.rs  storage.rs  wal.rs  warden_handler.rs
rangeserver/src/for_testing/: in_memory_wal.rs  mock_warden.rs
rangeserver/src/range_manager/: impl.rs  lock_table.rs  log_applicator.rs  replication_client.rs  secondary.rs
rangeserver/src/secondary_range_manager/: impl.rs  log_applicator.rs  replication_server.rs
rangeserver/src/storage/: cassandra.rs
rangeserver/src/wal/: cassandra.rs
schema/cassandra/atomix/: schema.cql
tx_state_store/src/storage/: cassandra.rs
universe/src/: server.rs  storage.rs
universe/src/storage/: cassandra.rs
universe/tests/: integration_tests.rs
warden/: Cargo.toml
warden/src/: assignment_computation.rs  debug.rs  lib.rs  main.rs  persistence.rs  server.rs  stream_multiplexer.rs
warden/src/persistence/: cassandra.rs
workload-generator/: .gitignore
workload-generator/configs/: config-ray.json
workload-generator/scripts/: plot_replication_experiment.ipynb  run_experiments.py  run_replication_experiment.py  scratchpad.ipynb  yugabyte_experiment.py
workload-generator/src/: transaction.rs  workload_generator.rs
(+2 files in other folders)
