[package]
name = "e2e_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path = "../common"}
proto = {path = "../proto"}
epoch = {path = "../epoch"}
epoch_publisher = {path = "../epoch_publisher"}
frontend = {path = "../frontend"}
rangeserver = {path = "../rangeserver", features = ["test_access"]}
warden = {path = "../warden", features = ["test_access"]}
universe = {path = "../universe"}
tokio = { version = "1", features = ["full"] }
uuid = {version = "1.0", features = ["v4"]}
thiserror = "1.0.57"
chrono = "0.4.34"
scylla = { version = "0.13.2", features = ["chrono"] }
tonic = "0.11.0"
tokio-util = "0.7.10"
tracing = "0.1.40"
serde_json = "1.0.128"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
bytes = "1"
